<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">inQueue</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to inQueue!</string>
    <string name="title_activity_splash_">Splash_Activity</string>
    <string name="splash">Splash</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="empty"></string>
    <string name="position">POSITION HERE</string>
    <string name="initial">Initial</string>
    <string name="createUser">Create User</string>
<<<<<<< HEAD
    <string name="logout">Log Out</string>
    <string name="okay">Okay</string>
    <string name="phoneNumber">Number</string>
    <string name="main">Main</string>
<<<<<<< HEAD
    <string name="title_section1">Restaurants</string>
    <string name="title_section2">Position</string>
    <string name="title_section3">george</string>
=======
=======
    <string name="title_section1">Restaurants</string>
    <string name="title_section2">Position</string>
    <string name="title_section3">george</string>
>>>>>>> 54ff78aa27169c8ae861f7c34902a1d0143f041f
>>>>>>> 96ae98ac75e656527a78632038f6985b211e241b
</resources>
