<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="match_parent" 
   android:background="#FFF" 
   android:id="@+id/tableLayout" 
   android:stretchColumns="1,2,3" 
   android:padding="5dp">
   
   <TableRow 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/initial_row0"
   />
       
   <TableRow 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/initial_row1">
       
       <TextView 
           android:id="@+id/firstName"
           android:text="@string/e_mail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_column="0"
           android:layout_weight="1"
           android:gravity="center" />
       
       <EditText 
           android:id="@+id/userEMail"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:longClickable="false"
           android:layout_span="3"
           android:gravity="left"
           />
       
   </TableRow>
    
   <TableRow 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/intial_row2">
       
       <TextView 
           android:id="@+id/lastName"
           android:text="@string/password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_column="0"
           android:layout_weight="1"
           android:gravity="center"
           />
       
       <EditText 
           android:id="@+id/userPassword"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:longClickable="false"
           android:layout_span="3"
           android:layout_weight="1"
           android:gravity="left"
           />
       
   </TableRow>
   
   <TableRow 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/initial_row3" >
       	
   	   <Button 
   	       android:id="@+id/submit"
   	       android:layout_span="2"
   	       android:text="@string/submit"
   	       />
   	   
   	   <Button 
   	       android:id="@+id/cancel"
   	       android:layout_span="2"
   	       android:text="@string/cancel"
   	       />
   	   		
   
   </TableRow>
       
</TableLayout>
